# Solis

./: .gitignore  .readthedocs.yaml  .rustfmt.toml  Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: README.md
sql/migrations/0_create_users/: up.sql
src/: auth.rs  certs.rs  config.rs  globals.rs  lib.rs  main.rs  tray.rs
src/db/: mod.rs  models.rs  schema.rs
src/dependencies/: mod.rs
src/logging/: mod.rs
src/web/: mod.rs
src/web/routes/: auth.rs  common.rs  dependencies.rs  mod.rs  user.rs
tests/: fixtures.rs  main.rs  test_tray.rs
tests/dependencies/: mod.rs
tests/web/: mod.rs
tests/web/routes/: auth.rs  common.rs  dependencies.rs  mod.rs  user.rs
