[package]
name = "koko"
description = "Self-hosted media server."
license = "AGPL-3"
version = "0.0.0"
authors = ["LizardByte"]
edition = "2021"
readme = "docs/README.md"
documentation = "https://github.com/LizardByte/Koko/blob/master/README.md"
homepage = "https://app.lizardbyte.dev"
repository = "https://github.com/LizardByte/Koko.git"
categories = [
    "multimedia",
    "multimedia::audio",
    "multimedia::images",
    "multimedia::video",
]
keywords = [
    "koko",
    "media-server",
    "self-hosted",
]
publish = false  # disable publishing to crates.io
build = "build.rs"

include = [
    "/assets",
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[lib]
name = "koko"
path = "src/lib.rs"

[[bin]]
name = "koko"
path = "src/main.rs"

[dependencies]
# ensure deps are compatible: https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses
chrono = "0.4.39"
fern = { version = "0.7.1", features = ["colored"] }
image = "0.25.5"
log = "0.4.25"
regex = "1.11.1"
rocket = "0.5.1"
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
tao = "0.31.1"
tray-icon = "0.19.2"
webbrowser = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.0"

[dev-dependencies]

[package.metadata.ci]
cargo-run-bin = "1.7.4"

[package.metadata.bin]
cargo-edit = { version = "0.13.1" }
cargo-tarpaulin = { version = "0.31.5" }
